Introduce GitHub Action based CI
This change adds a configuration file for a GitHub Actions based CI
pipeline to the repository. This file (directly or indirectly) controls
the environment in which to build and test, and is also used for some
additional linting.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "bufio"
 version = "0.0.0"
 edition = "2021"
+rust-version = "1.56"
 authors = ["Daniel Mueller <deso@posteo.net>"]
 homepage = "https://github.com/d-e-s-o/bufio"
 repository = "https://github.com/d-e-s-o/bufio.git"
