--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,8 +69,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: clippy
       - run: cargo clippy --workspace --no-deps --all-targets -- -A unknown_lints -A deprecated -D warnings
-  cargo-doc:
+  rustdoc:
     name: Generate documentation
     runs-on: ubuntu-latest
     env:
